Mexe um pouco na formatação e fonte

--- a/src/app/Components/quizz/quizz.component.scss
+++ b/src/app/Components/quizz/quizz.component.scss
@@ -12,8 +12,9 @@
   margin-bottom: 10px;
 }
 
-.quizz_logo > h3{
-  margin-top: 20px;
+.quizz-logo > h3{
+  margin-top: 1vw;
+  color: #bebebe;
 }
 
 .quizz-questions{
